Don't define _T() when using Sun compiler if possible.

Avoid defining _T() if possible as it conflicts with the use of this
identifier in standard headers. Do still define it when building wx itself or
when the special symbol wxNEEDS__T is explicitly predefined.

See #10660.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_8_BRANCH@61870 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775